--- a/artworks.html
+++ b/artworks.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,11 +14,11 @@
 
   <!-- Banner -->
   <header class="artworks-header">
-    <div class="banner-text">
-      <h1>Artwork</h1>
-      <h2>This is my gallery of artworks</h2>
-    </div>
-  </header>
+  <div class="banner-text">
+    <h1>Artwork</h1>
+    <h2>This is my gallery of artworks</h2>
+  </div>
+</header>
 
   <!-- Gallery -->
   <main class="gallery-container">
@@ -35,7 +36,7 @@
         <img src="images/theboyismine.jpg" alt="Traditional watercolor piece">
       </a>
       <a href="images/danas.jpg" target="_blank">
-        <img src="images/danas.jpg" alt="Digital painting">
+        <img src="images/danas.jpg" alt="Digital painting: Pearl">
       </a>
       <a href="images/qualityeducation.jpg" target="_blank">
         <img src="images/qualityeducation.jpg" alt="Traditional sketch in pencil">
