--- a/artworks.html
+++ b/artworks.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,125 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Artworks - Karl's Portfolio</title>
   <link rel="stylesheet" href="style.css">
-  <style>
-    /* === Banner Section === */
-    .artworks-header {
-      position: relative;
-      background: url('images/banner-artworks.jpg') center/cover no-repeat;
-      color: #fff;
-      text-align: center;
-      padding: 100px 20px;
-      margin: 0;
-    }
-
-    /* === Back Button Inside Banner === */
-    .back-button {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      background: rgba(0, 0, 0, 0.5);
-      color: #fff;
-      text-decoration: none;
-      padding: 8px 14px;
-      border-radius: 6px;
-      font-family: Arial, sans-serif;
-      font-size: 14px;
-      transition: background 0.3s ease;
-      z-index: 10;
-    }
-
-    .back-button:hover {
-      background: rgba(0, 0, 0, 0.8);
-    }
-
-    /* === Banner Text === */
-    .banner-text {
-      margin-top: 40px;
-    }
-
-    .banner-text h1 {
-      font-family: 'Times New Roman', Times, serif;
-      font-size: 36px;
-      margin-bottom: 10px;
-    }
-
-    .banner-text h2 {
-      font-family: 'Segoe UI', sans-serif;
-      font-weight: 300;
-      color: #ddd;
-      font-size: 18px;
-    }
-
-    /* === Gallery Section === */
-    .gallery-container {
-      background-color: #161819;
-      color: #f5f5f5;
-      padding: 60px 20px;
-      text-align: center;
-    }
-
-    .gallery-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      padding: 20px;
-      justify-items: center;
-    }
-
-    .gallery-grid img {
-      width: 100%;
-      height: auto;
-      border-radius: 10px;
-      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
-      transition: transform 0.3s ease, opacity 0.3s ease;
-    }
-
-    .gallery-grid img:hover {
-      transform: scale(1.05);
-      opacity: 0.9;
-    }
-
-    /* === Footer === */
-    footer {
-      background-color: #111;
-      color: #aaa;
-      text-align: center;
-      padding: 20px 0;
-      font-size: 14px;
-    }
-
-    /* === Responsive Adjustments === */
-    @media (max-width: 600px) {
-      .banner-text h1 {
-        font-size: 28px;
-      }
-      .banner-text h2 {
-        font-size: 16px;
-      }
-      .artworks-header {
-        padding: 80px 20px;
-      }
-    }
-
-    /* Remove default spacing */
-    body {
-      margin: 0;
-      padding: 0;
-      background-color: #161819;
-      font-family: 'Segoe UI', sans-serif;
-    }
-  </style>
 </head>
 <body>
+  
+  <!-- Back Button -->
+  <a href="index.html" class="back-button">Back</a>
 
   <!-- Banner -->
   <header class="artworks-header">
-    <a href="index.html" class="back-button">Back</a>
-    <div class="banner-text">
-      <h1>Artwork</h1>
-      <h2>This is my gallery of artworks</h2>
-    </div>
-  </header>
+  <div class="banner-text">
+    <h1>Artwork</h1>
+    <h2>This is my gallery of artworks</h2>
+  </div>
+</header>
 
   <!-- Gallery -->
   <main class="gallery-container">
