--- a/artworks.html
+++ b/artworks.html
@@ -4,53 +4,90 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Artworks - Karl's Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css?v=3">
 </head>
 <body>
-
+  
   <!-- Banner -->
   <header class="artworks-header">
-  <a href="index.html" class="back-button">Back</a>
-  <div class="banner-text">
-    <h1>Artwork</h1>
-    <h2>This is my gallery of artworks</h2>
-  </div>
-</header>
+    <a href="index.html" class="back-button">Back</a>
+    <div class="banner-text">
+      <h1>Artwork</h1>
+      <h2>This is my gallery of artworks</h2>
+    </div>
+  </header>
 
   <!-- Gallery -->
   <main class="gallery-container">
     <div class="gallery-grid">
-      <a href="images/pearl.jpg" target="_blank">
-        <img src="images/pearl.jpg" alt="Digital painting: Pearl">
-      </a>
-      <a href="images/marymagdalene.jpg" target="_blank">
-        <img src="images/marymagdalene.jpg" alt="Traditional sketch in pencil">
-      </a>
-      <a href="images/human.jpg" target="_blank">
-        <img src="images/human.jpg" alt="Digital illustration">
-      </a>
-      <a href="images/theboyismine.jpg" target="_blank">
-        <img src="images/theboyismine.jpg" alt="Traditional watercolor piece">
-      </a>
-      <a href="images/danas.jpg" target="_blank">
-        <img src="images/danas.jpg" alt="Digital painting: Pearl">
-      </a>
-      <a href="images/qualityeducation.jpg" target="_blank">
-        <img src="images/qualityeducation.jpg" alt="Traditional sketch in pencil">
-      </a>
-      <a href="images/yumeko.jpg" target="_blank">
-        <img src="images/yumeko.jpg" alt="Digital illustration">
-      </a>
-      <a href="images/artcommission.jpg" target="_blank">
-        <img src="images/artcommission.jpg" alt="Traditional watercolor piece">
-      </a>
+      <a href="#" data-index="0"><img src="images/pearl.jpg" alt="Digital painting: Pearl"></a>
+      <a href="#" data-index="1"><img src="images/marymagdalene.jpg" alt="Traditional sketch in pencil"></a>
+      <a href="#" data-index="2"><img src="images/human.jpg" alt="Digital illustration"></a>
+      <a href="#" data-index="3"><img src="images/theboyismine.jpg" alt="Traditional watercolor piece"></a>
+      <a href="#" data-index="4"><img src="images/danas.jpg" alt="Digital painting"></a>
+      <a href="#" data-index="5"><img src="images/qualityeducation.jpg" alt="Traditional sketch"></a>
+      <a href="#" data-index="6"><img src="images/yumeko.jpg" alt="Digital illustration"></a>
+      <a href="#" data-index="7"><img src="images/artcommission.jpg" alt="Traditional watercolor piece"></a>
     </div>
   </main>
+
+  <!-- Lightbox -->
+  <div class="art-lightbox">
+    <div class="lightbox-bg"></div>
+    <div class="lightbox-content">
+      <img src="" alt="Artwork Full View" class="lightbox-img">
+      <div class="lightbox-desc">
+        <h3>Artwork Title</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo ipsum sed mi luctus, nec convallis justo pretium.</p>
+      </div>
+    </div>
+    <span class="close-btn">✕</span>
+    <span class="next-btn">→</span>
+  </div>
 
   <!-- Footer -->
   <footer>
     <p>© 2025 Karl. All rights reserved.</p>
   </footer>
 
+  <script>
+    const galleryImages = document.querySelectorAll('.gallery-grid a img');
+    const lightbox = document.querySelector('.art-lightbox');
+    const lightboxImg = document.querySelector('.lightbox-img');
+    const lightboxBg = document.querySelector('.lightbox-bg');
+    const closeBtn = document.querySelector('.close-btn');
+    const nextBtn = document.querySelector('.next-btn');
+
+    let currentIndex = 0;
+
+    galleryImages.forEach((img, index) => {
+      img.parentElement.addEventListener('click', (e) => {
+        e.preventDefault();
+        openLightbox(index);
+      });
+    });
+
+    function openLightbox(index) {
+      currentIndex = index;
+      const src = galleryImages[index].src;
+      lightboxImg.src = src;
+      lightboxBg.style.backgroundImage = `url(${src})`;
+      lightbox.style.display = 'flex';
+      document.body.style.overflow = 'hidden';
+    }
+
+    function closeLightbox() {
+      lightbox.style.display = 'none';
+      document.body.style.overflow = 'auto';
+    }
+
+    function nextImage() {
+      currentIndex = (currentIndex + 1) % galleryImages.length;
+      openLightbox(currentIndex);
+    }
+
+    closeBtn.addEventListener('click', closeLightbox);
+    nextBtn.addEventListener('click', nextImage);
+  </script>
 </body>
 </html>
