--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <section id="projects" class="projects container">
     <h2 class="projects-title">Projects</h2>
     <div class="projects-grid">
-      <a href="#" class="project-card">
+      <a href="writing.html" class="project-card">
         <h3>Writing</h3>
         <p>My written works: essays and poems.</p>
       </a>
