--- a/writing.html
+++ b/writing.html
@@ -23,7 +23,7 @@
       <div class="writing-text">
         <h2>First</h2>
         <p>What's up <em>Title</em>.</p>
-        <a href="#" class="view-link">Click to view full →</a>
+        <a href="#" class="view-link">Click to view full</a>
       </div>
     </article>
 
@@ -32,7 +32,7 @@
       <div class="writing-text">
         <h2>Two</h2>
         <p>Whatever</p>
-        <a href="#" class="view-link">Click to view full →</a>
+        <a href="#" class="view-link">Click to view full</a>
       </div>
     </article>
 
@@ -41,7 +41,7 @@
       <div class="writing-text">
         <h2>Great</h2>
         <p>Aaaaaa</p>
-        <a href="#" class="view-link">Click to view full →</a>
+        <a href="#" class="view-link">Click to view full</a>
       </div>
     </article>
 
