--- a/writing.html
+++ b/writing.html
@@ -10,7 +10,7 @@
 
   <!-- Banner -->
   <header class="writing-header">
-    <a href="index.html" class="back-button">← Back</a>
+    <a href="index.html" class="back-button">Back</a>
     <h1>Writing Pieces</h1>
     <p class="subhead">Essays, analyses, and creative reflections.</p>
   </header>
