--- a/writing.html
+++ b/writing.html
@@ -9,11 +9,13 @@
 <body class="writing-page">
 
   <!-- Banner -->
-  <header class="writing-header">
-    <a href="index.html" class="back-button">Back</a>
+<header class="writing-header">
+  <a href="index.html" class="back-button">Back</a>
+  <div class="banner-text">
     <h1>Writing Pieces</h1>
-    <p class="subhead">Essays, analyses, and creative reflections.</p>
-  </header>
+    <h2>My sample works of poetry and creative reflections.</h2>
+  </div>
+</header>
 
   <!-- Writing Entries -->
   <main class="writing-container">
