--- a/writing.html
+++ b/writing.html
@@ -10,6 +10,7 @@
 
   <!-- Banner -->
 <header class="writing-header">
+<a href="index.html" class="back-button">Back</a>
   <div class="banner-text">
     <h1>Writing Pieces</h1>
     <h2>My sample works of poetry and creative reflections.</h2>
