--- a/writing.html
+++ b/writing.html
@@ -23,9 +23,9 @@
     <article class="writing-card">
       <img src="images/article1.jpg" alt="Article 1 image">
       <div class="writing-text">
-        <h2>First</h2>
-        <p>What's up <em>Title</em>.</p>
-        <a href="#" class="view-link">Click to view full</a>
+        <h2><em>In</em>nto Such <em>Security</em></h2>
+        <p>A poem about one’s insecurity and the longing for such security that whoever they are, it will be enough.</p>
+        <a href="#" class="view-link">Click here to read</a>
       </div>
     </article>
 
