--- a/writing.html
+++ b/writing.html
@@ -23,7 +23,7 @@
     <article class="writing-card">
       <img src="images/article1.jpg" alt="Article 1 image">
       <div class="writing-text">
-        <h2><em>In</em>nto Such <em>Security</em></h2>
+        <h2><em>In</em>to Such <em>Security</em></h2>
         <p>A poem about one’s insecurity and the longing for such security that whoever they are, it will be enough.</p>
         <a href="#" class="view-link">Click here to read</a>
       </div>
