--- a/writing.html
+++ b/writing.html
@@ -32,18 +32,19 @@
     <article class="writing-card">
       <img src="images/article2.jpg" alt="Article 2 image">
       <div class="writing-text">
-        <h2>Two</h2>
-        <p>Whatever</p>
-        <a href="#" class="view-link">Click to view full</a>
+        <h2>TAHO</h2>
+        <p>Ang tulang tungkol sa nakaraang kasintamis ng arnibal at kasinglambot ng malasutlang tokwa — ang init ng yakap na nagmumula sa taglimang pisong taho.
+        <em>A poem about a past as sweet as syrup and as soft as silken tofu — the warmth of an embrace poured from a five-peso cup of taho.</em></p>
+        <a href="#" class="view-link">Click here to read</a>
       </div>
     </article>
 
     <article class="writing-card">
       <img src="images/article3.jpg" alt="Article 3 image">
       <div class="writing-text">
-        <h2>Great</h2>
-        <p>Aaaaaa</p>
-        <a href="#" class="view-link">Click to view full</a>
+        <h2>It Takes Two to Leave One Alone</h2>
+        <p>A creative critical essay on Algene De Guzman's <em>The Sense of Oil</em></p>
+        <a href="#" class="view-link">Click here to read</a>
       </div>
     </article>
 
