--- a/writing.html
+++ b/writing.html
@@ -33,8 +33,10 @@
       <img src="images/article2.jpg" alt="Article 2 image">
       <div class="writing-text">
         <h2>TAHO</h2>
-        <p>Ang tulang tungkol sa nakaraang kasintamis ng arnibal at kasinglambot ng malasutlang tokwa — ang init ng yakap na nagmumula sa taglimang pisong taho.<br>
-<em class="translation">A poem about a past as sweet as syrup and as soft as silken tofu — the warmth of an embrace poured from a five-peso cup of taho.</em></p>
+        <p>
+  Ang tulang tungkol sa nakaraang kasintamis ng arnibal at kasinglambot ng malasutlang tokwa — ang init ng yakap na nagmumula sa taglimang pisong taho.<br>
+  <em class="translation">A poem about a past as sweet as syrup and as soft as silken tofu — the warmth of an embrace poured from a five-peso cup of taho.</em>
+</p>
         <a href="#" class="view-link">Click here to read</a>
       </div>
     </article>
