--- a/writing.html
+++ b/writing.html
@@ -44,8 +44,8 @@
     <article class="writing-card">
       <img src="images/article3.jpg" alt="Article 3 image">
       <div class="writing-text">
-        <h2>It Takes Two to Leave One Alone</h2>
-        <p>A creative critical essay on Algene De Guzman's <em>The Sense of Oil</em></p>
+        <h2>Fields of Bountiful Dead Romances</h2>
+        <p>A Critique of Thomas Hardy's <em>Far from the Madding Crowd</em></p>
         <a href="#" class="view-link">Click here to read</a>
       </div>
     </article>
