--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h3>Artwork</h3>
         <p>Drawings, both digital and traditional.</p>
       </a>
-      <a href="#" class="project-card">
+      <a href="design.html" class="project-card">
         <h3>Designs</h3>
         <p>Publication materials and creative PowerPoints.</p>
       </a>
