--- a/design.html
+++ b/design.html
@@ -3,60 +3,162 @@
   <div class="container mx-auto px-6">
     <h2 class="text-3xl font-bold text-center mb-12">My Designs</h2>
 
-    <!-- Stack Container -->
-    <div class="stack-container relative w-full max-w-4xl mx-auto h-96">
-      <!-- Project Cards -->
-      <div class="stack-card absolute top-0 left-0 w-full h-full rounded shadow-lg bg-white overflow-hidden transition-transform duration-300" style="z-index:4;">
-        <img src="pub1.jpg" alt="Publication 1" class="w-full h-full object-cover">
-        <div class="p-4">
-          <h3 class="font-semibold text-lg">Publication 1</h3>
-          <p class="text-gray-600 text-sm">A brief description of this project.</p>
-        </div>
-      </div>
+    <!-- Stack Navigation -->
+    <div class="relative max-w-4xl mx-auto">
+      <button id="prevStack" class="absolute left-0 top-1/2 transform -translate-y-1/2 text-4xl font-bold text-gray-600 hover:text-gray-900 z-20">&#9664;</button>
+      <button id="nextStack" class="absolute right-0 top-1/2 transform -translate-y-1/2 text-4xl font-bold text-gray-600 hover:text-gray-900 z-20">&#9654;</button>
 
-      <div class="stack-card absolute top-4 left-4 w-full h-full rounded shadow-lg bg-white overflow-hidden transition-transform duration-300" style="z-index:3;">
-        <img src="ppt1.jpg" alt="PowerPoint 1" class="w-full h-full object-cover">
-        <div class="p-4">
-          <h3 class="font-semibold text-lg">PowerPoint 1</h3>
-          <p class="text-gray-600 text-sm">A brief description of this project.</p>
+      <!-- Stacks Wrapper -->
+      <div id="stacksWrapper" class="relative overflow-hidden h-96">
+        <!-- Stack 1 -->
+        <div class="stack absolute inset-0 flex transition-all duration-500 opacity-100">
+          <div class="stack-card relative w-full rounded shadow-lg bg-white overflow-hidden m-0.5 cursor-pointer">
+            <img src="pub1.jpg" alt="Publication 1" class="w-full h-full object-cover">
+            <div class="p-4">
+              <h3 class="font-semibold text-lg">Publication 1</h3>
+              <p class="text-gray-600 text-sm">Click to see full project</p>
+            </div>
+          </div>
+          <div class="stack-card relative w-full rounded shadow-lg bg-white overflow-hidden m-0.5 cursor-pointer">
+            <img src="pub2.jpg" alt="Publication 2" class="w-full h-full object-cover">
+            <div class="p-4">
+              <h3 class="font-semibold text-lg">Publication 2</h3>
+              <p class="text-gray-600 text-sm">Click to see full project</p>
+            </div>
+          </div>
+          <div class="stack-card relative w-full rounded shadow-lg bg-white overflow-hidden m-0.5 cursor-pointer">
+            <img src="pub3.jpg" alt="Publication 3" class="w-full h-full object-cover">
+            <div class="p-4">
+              <h3 class="font-semibold text-lg">Publication 3</h3>
+              <p class="text-gray-600 text-sm">Click to see full project</p>
+            </div>
+          </div>
         </div>
-      </div>
 
-      <div class="stack-card absolute top-8 left-8 w-full h-full rounded shadow-lg bg-white overflow-hidden transition-transform duration-300" style="z-index:2;">
-        <img src="poster1.jpg" alt="Poster 1" class="w-full h-full object-cover">
-        <div class="p-4">
-          <h3 class="font-semibold text-lg">Poster 1</h3>
-          <p class="text-gray-600 text-sm">A brief description of this project.</p>
+        <!-- Stack 2 -->
+        <div class="stack absolute inset-0 flex transition-all duration-500 opacity-0">
+          <div class="stack-card relative w-full rounded shadow-lg bg-white overflow-hidden m-0.5 cursor-pointer">
+            <img src="ppt1.jpg" alt="PowerPoint 1" class="w-full h-full object-cover">
+            <div class="p-4">
+              <h3 class="font-semibold text-lg">PowerPoint 1</h3>
+              <p class="text-gray-600 text-sm">Click to see full project</p>
+            </div>
+          </div>
+          <div class="stack-card relative w-full rounded shadow-lg bg-white overflow-hidden m-0.5 cursor-pointer">
+            <img src="ppt2.jpg" alt="PowerPoint 2" class="w-full h-full object-cover">
+            <div class="p-4">
+              <h3 class="font-semibold text-lg">PowerPoint 2</h3>
+              <p class="text-gray-600 text-sm">Click to see full project</p>
+            </div>
+          </div>
+          <div class="stack-card relative w-full rounded shadow-lg bg-white overflow-hidden m-0.5 cursor-pointer">
+            <img src="poster1.jpg" alt="Poster 1" class="w-full h-full object-cover">
+            <div class="p-4">
+              <h3 class="font-semibold text-lg">Poster 1</h3>
+              <p class="text-gray-600 text-sm">Click to see full project</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 </section>
 
-<!-- Hover Script -->
+<!-- Multi-slide Modal -->
+<div id="modal" class="fixed inset-0 bg-black bg-opacity-70 flex justify-center items-center hidden z-50">
+  <div class="relative w-3/4 max-w-3xl bg-white rounded shadow-lg">
+    <button id="closeModal" class="absolute top-2 right-4 text-xl font-bold text-gray-700 hover:text-gray-900">&times;</button>
+    <div id="modalContent" class="overflow-hidden relative h-96">
+      <!-- Slides will be injected here -->
+    </div>
+    <button id="prevSlide" class="absolute left-2 top-1/2 transform -translate-y-1/2 text-3xl font-bold text-gray-700 hover:text-gray-900">&#9664;</button>
+    <button id="nextSlide" class="absolute right-2 top-1/2 transform -translate-y-1/2 text-3xl font-bold text-gray-700 hover:text-gray-900">&#9654;</button>
+  </div>
+</div>
+
+<!-- JS -->
 <script>
-  const cards = document.querySelectorAll('.stack-card');
+const stacks = document.querySelectorAll('.stack');
+let currentStack = 0;
 
-  cards.forEach((card, i) => {
-    card.addEventListener('mouseenter', () => {
-      cards.forEach((c, j) => {
-        if(j < i){
-          c.style.transform = 'translate(-10px, -10px) scale(0.95)';
-        } else if(j === i){
-          c.style.transform = 'translate(0px, 0px) scale(1.05)';
-        } else {
-          c.style.transform = 'translate(10px, 10px) scale(0.95)';
-        }
-      });
-    });
+function showStack(index) {
+  stacks.forEach((stack, i) => {
+    if(i === index){
+      stack.style.opacity = 1;
+      stack.style.transform = 'translateX(0)';
+    } else if(i < index){
+      stack.style.opacity = 0;
+      stack.style.transform = 'translateX(-100%)';
+    } else {
+      stack.style.opacity = 0;
+      stack.style.transform = 'translateX(100%)';
+    }
+  });
+}
 
-    card.addEventListener('mouseleave', () => {
-      cards.forEach((c) => {
-        c.style.transform = '';
-      });
+document.getElementById('nextStack').addEventListener('click', () => {
+  currentStack = (currentStack + 1) % stacks.length;
+  showStack(currentStack);
+});
+
+document.getElementById('prevStack').addEventListener('click', () => {
+  currentStack = (currentStack - 1 + stacks.length) % stacks.length;
+  showStack(currentStack);
+});
+
+showStack(currentStack);
+
+// Hover stack animation
+document.querySelectorAll('.stack-card').forEach((card, i, arr) => {
+  card.addEventListener('mouseenter', () => {
+    arr.forEach((c,j)=>{
+      if(j<i) c.style.transform='translate(-10px,-10px) scale(0.95)';
+      else if(j===i) c.style.transform='translate(0,0) scale(1.05)';
+      else c.style.transform='translate(10px,10px) scale(0.95)';
     });
   });
+  card.addEventListener('mouseleave', () => {
+    arr.forEach(c=>c.style.transform='translate(0,0) scale(1)');
+  });
+
+  // Click to see full project
+  card.addEventListener('click', () => openModal(card));
+});
+
+// Modal slides
+const modal = document.getElementById('modal');
+const modalContent = document.getElementById('modalContent');
+let slides = [];
+let currentSlide = 0;
+
+function openModal(card){
+  // Example: simulate multiple slides per project
+  slides = [
+    card.querySelector('img').src,
+    'placeholder-slide2.jpg',
+    'placeholder-slide3.jpg'
+  ];
+  currentSlide = 0;
+  renderSlide();
+  modal.classList.remove('hidden');
+}
+
+function renderSlide(){
+  modalContent.innerHTML = `<img src="${slides[currentSlide]}" class="w-full h-full object-contain">`;
+}
+
+document.getElementById('closeModal').addEventListener('click',()=>modal.classList.add('hidden'));
+
+document.getElementById('nextSlide').addEventListener('click',()=>{
+  currentSlide = (currentSlide+1)%slides.length;
+  renderSlide();
+});
+
+document.getElementById('prevSlide').addEventListener('click',()=>{
+  currentSlide = (currentSlide-1+slides.length)%slides.length;
+  renderSlide();
+});
 </script>
 
-<!-- Tailwind CSS CDN -->
+<!-- Tailwind CSS -->
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
