--- a/design.html
+++ b/design.html
@@ -1,3 +1,23 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Designs - Karl's Portfolio</title>
+  <link rel="stylesheet" href="style.css?v=7">
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="designs-page">
+
+  <!-- Banner Header -->
+  <header class="designs-header bg-indigo-600 text-white py-12 relative">
+    <a href="index.html" class="absolute left-6 top-6 text-white bg-indigo-800 px-4 py-2 rounded hover:bg-indigo-900">Back</a>
+    <div class="text-center">
+      <h1 class="text-4xl font-bold mb-2">Designs</h1>
+      <h2 class="text-lg md:text-xl">My sample works: publications, PowerPoints, and creative posters.</h2>
+    </div>
+  </header>
+  
 <!-- Design Section -->
 <section id="designs" class="py-12 bg-gray-50">
   <div class="container mx-auto px-6">
