--- a/design.html
+++ b/design.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Designs - Karl's Portfolio</title>
+  <title>Designs</title>
   <link rel="stylesheet" href="style.css?v=7">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -33,7 +33,7 @@
         <!-- Stack 1 -->
         <div class="stack absolute inset-0 flex transition-all duration-500 opacity-100">
           <div class="stack-card relative w-full rounded shadow-lg bg-white overflow-hidden m-0.5 cursor-pointer">
-            <img src="pub1.jpg" alt="Publication 1" class="w-full h-full object-cover">
+            <img src="ppt1.jpg" alt="Publication 1" class="w-full h-full object-cover">
             <div class="p-4">
               <h3 class="font-semibold text-lg">Publication 1</h3>
               <p class="text-gray-600 text-sm">Click to see full project</p>
